fix scrollbar disabled because of background image

--- a/css/dashboard_static.css
+++ b/css/dashboard_static.css
@@ -4,16 +4,16 @@ body[data-dashboard-background="default"] {
     /*This is nessessary because ::before needs content to show up*/
     content: "";
 
-    position: fixed;
     left: 0;
     right: 0;
     z-index: -1;
     width: 100%;
     height: 100%;
 
-    background-position : center;
-    background-repeat   : no-repeat;
-    background-size     : cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 body[data-dashboard-background="default"] div[id=app-dashboard] {
